# rnpl-LRversion

./: .gitignore  README.md
rnpletal/: Clean  Install.Pathscale  Install.generic  Install.gnu  Install.gnu.FreeBSD  Install.gnu.darwin  Install.gnu.mpich  Install.intel  Install.intel.16  Install.intel.AMD64  Install.intel.P4  Install.osf1  Install.osx.gnu  Install.pgi.AMD64  Install.pgi.P4  Install.pgi.PIII  Install.sgi  Install.sun  Install.sun.gnu  Makefile  PACKAGES.sh  README  Update-aclocal  aclocal.m4  fcns.sh  main.sh
rnpletal/cliser/: Makefile.in  README  configure  configure.in
rnpletal/cliser/autom4te.cache/: output.0  requests  traces.0
rnpletal/cliser/examples/: Makefile.in  Test  cli0.c  ser0.c  stream.x
rnpletal/cliser/src/: Makefile.in  cliser.c  cliser.h
rnpletal/cvtestsdf/: Makefile.in  aclocal.m4  configure  configure.in  cvtestsdf.c  cvtestsdf.h  rnpl_aux_types.h
rnpletal/cvtestsdf/autom4te.cache/: output.0  requests  traces.0
rnpletal/netlib_fftpack/: Makefile.in  Makefile.orig  README  dcftb1.f  dcftf1.f  dcfti1.f  dcosqb.f  dcosqf.f  dcost.f  defft1.f  defftb.f  defftf.f  dependencies  directory  disclaimer  drftb1.f  drftf1.f  drfti1.f  dsint.f  index  index.html  permission  scftb1.f  scftf1.f  scfti1.f  scosqb.f  scosqf.f  scost.f  sefft1.f  sefftb.f  sefftf.f  srftb1.f  (+3 more)
rnpletal/rnpl/: .laliases  INSTALL  Makefile.in  README  configure  configure.in
rnpletal/rnpl/CVS/: Entries  Repository
rnpletal/rnpl/autom4te.cache/: output.0  requests  traces.0
rnpletal/rnpl/doc/: README.bbhutil  bbhutil.ps  refman.ps  users_guide.ps
rnpletal/rnpl/doc/CVS/: Entries  Repository
rnpletal/rnpl/etc/: .laliases  Makefile.in  checkx  hdfinfo.c  hdftovs.c  makex  rnpl_fix_f77  sdfdump.c  sdffilter.c  sdffilter.h  sdfinfo.c  sdfrank.c  sdfslice.c  sdfslice_util.c  sdfslice_util.h  sdfslice_util_f.f  sdftemplate.c  sdftosv.c  sdftosvx.c  sdftovs.c  sdftranspose.c  sdftranspose.h  ss
rnpletal/rnpl/etc/CVS/: Entries  Repository
rnpletal/rnpl/examples/CVS/: Entries  Repository
rnpletal/rnpl/examples/allf/: Makefile.in  id2  id5  id7  load.map
rnpletal/rnpl/examples/allf/CVS/: Repository
rnpletal/rnpl/examples/c/: Makefile.in  expected.hdf.info  w1d_0
rnpletal/rnpl/examples/c/CVS/: Repository
rnpletal/rnpl/examples/f77/: Makefile.in
rnpletal/rnpl/examples/f77/CVS/: Entries
rnpletal/rnpl/examples/get_param/: .laliases  Makefile.in  param  param1  param_is  param_str  param_str1  param_v  t_get_param.c  t_get_param_v.c  t_get_str_param.c  t_is_param_assigned.c  t_regex.c
rnpletal/rnpl/examples/get_param/CVS/: Entries  Repository
rnpletal/rnpl/examples/templates/CVS/: Repository
rnpletal/rnpl/examples/templates/allf/: Makefile.in
rnpletal/rnpl/examples/templates/allf/CVS/: Repository
rnpletal/rnpl/examples/templates/c/: Makefile.in
rnpletal/rnpl/examples/templates/c/CVS/: Repository
rnpletal/rnpl/examples/templates/f77/: Makefile.in
rnpletal/rnpl/examples/templates/f77/CVS/: Entries  Repository
rnpletal/rnpl/examples/wave1d/CVS/: Repository
rnpletal/rnpl/examples/wave1d/allf/: .laliases  id0  id1  id10  id3  id4  id6  id8  id9  w1d_0  wave1df_rnpl
rnpletal/rnpl/examples/wave1d/allf/CVS/: Entries
rnpletal/rnpl/examples/wave1d/c/: wave1d_rnpl
rnpletal/rnpl/examples/wave1d/c/CVS/: Entries
rnpletal/rnpl/examples/wave1d/f77/: expected.sdf.info  wave1df_rnpl
rnpletal/rnpl/examples/wave1d/f77/CVS/: Repository
rnpletal/rnpl/examples/wave2d/CVS/: Entries  Repository
rnpletal/rnpl/examples/wave2d/allf/: Makefile.in  id-400-400-400  id-800-800-400  w2d_0  w2d_1  w2d_2  wave2df_rnpl
rnpletal/rnpl/examples/wave2d/allf/CVS/: Entries  Repository
rnpletal/rnpl/examples/wave2d/c/: Makefile.in  expected.hdf.info  expected.sdf.info  w2d_0  wave2d_rnpl
rnpletal/rnpl/examples/wave2d/c/CVS/: Entries  Repository
rnpletal/rnpl/examples/wave2d/f77/: Makefile.in
rnpletal/rnpl/examples/wave2d/f77/CVS/: Entries  Repository
rnpletal/rnpl/examples/wave3d/CVS/: Repository
rnpletal/rnpl/examples/wave3d/allf/: Makefile.in  expected.hdf.info  w3d_0  wave3df_rnpl
rnpletal/rnpl/examples/wave3d/allf/CVS/: Entries  Repository
rnpletal/rnpl/examples/wave3d/c/: Makefile.in  w3d_0  wave3d_rnpl
rnpletal/rnpl/examples/wave3d/c/CVS/: Entries  Repository
rnpletal/rnpl/examples/wave3d/f77/: Makefile.in  expected.sdf.info  wave3df_rnpl
rnpletal/rnpl/examples/wave3d/f77/CVS/: Repository
rnpletal/rnpl/lib/CVS/: Repository
rnpletal/rnpl/src/: .laliases  Makefile.in  Tpart.c  bbhutil.c  bbhutil.h  genf77extern.c  genf77extern_linux.c  genf77extern_unicos.c  gpar.y  librnpl.c  librnpl.h  librnpl_f.h  librnplf77.f  rnpl.h  rnpl.l  rnpl.y  rnpl_sup.c  sdf.c  sdf_priv.h  tpart.f
rnpletal/rnpl/src/CVS/: Entries  Repository
rnpletal/rvs/: Makefile.in  README  configure  configure.in
rnpletal/rvs/autom4te.cache/: output.0  requests  traces.0
rnpletal/rvs/src/: Makefile.in  Test  bbh_types.h  f77_types.h  rvs.x  rvs_cli.c  rvs_cli.h  rvs_cli_headers.h  rvs_cli_includes.h  rvs_proc.c  rvs_svc.c  v1.c  v_types.h  vn.c  vs_server_names.h
rnpletal/rvs/src/Archive/: Makefile.in  rvs_cli.c  rvs_cli_cf.c  rvs_clnt.c  rvs_svc.c  rvs_xdr.c  tvs.c  v1.c
rnpletal/svs/: Makefile.in  _foo.f  configure  configure.in
rnpletal/svs/autom4te.cache/: output.0  requests  traces.0
rnpletal/svs/examples/: Makefile  Makefile.in  c_thvs.c  f_thvs.f  work.pc
rnpletal/svs/src/: Makefile.in  svs.c  svs.h
rnpletal/utilmath/: Makefile.in  _foo.f  _output  configure  configure.in  utilmath.f  utilmath_c.c  utilmath_c.h  utilmath_c_old.c  utilmath_c_old.h  utilmathc.c  utilmathc.h
rnpletal/utilmath/autom4te.cache/: output.0  requests  traces.0
rnpletal/visutil/: Makefile.in  README  aclocal.m4  configure  configure.in
rnpletal/visutil/autom4te.cache/: output.0  requests  traces.0
rnpletal/visutil/sdftodv/: Makefile.in  common_fncs.c  common_fncs.h  sdftodv.c
rnpletal/visutil/xvsutil/: Makefile.in  libxvs.c  libxvs.h  libxvs_f.h  quad_types.h  sdf_types.h  sdf_util.c  sdf_util.h  sdftoxvs.c  sysincludes.h  xv1.c  xvn.c  xvscliser.c  xvscliser.h
(+146 files in other folders)
