dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/cliser.c)

dnl Determine system type
BBH_SYS_GETSYSTEM

dnl Checks for programs
AC_PROG_CC
AC_CHECK_PROG(RANLIB,ranlib,ranlib,touch)
AC_CHECK_PROG(AR,ar,ar,touch)
AC_CHECK_PROG(RPCGEN,rpcgen,rpcgen,no)
AC_CHECK_PROG(CTOF,mfi,mfi,no)

BBH_F77_CONFIGURE
BBH_RNPL_SET_VARS
AC_SUBST(BBH_DEFS)

dnl Checks for libraries.
dnl Replace `main' with a function in -lvs:
dnl AC_CHECK_LIB(vs, vsxynt)
dnl AC_CHECK_LIB(df, DFopen)
dnl AC_CHECK_LIB(netcdf, nccreate)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(
          Makefile
          src/Makefile
          examples/Makefile
         )
