dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

dnl Determine system type
BBH_SYS_GETSYSTEM

BBH_INSTALL_GENF77EXTERN

dnl Checks for programs.

AC_CHECK_PROG(LEX,flex,flex,no)
if test "$LEX" = no; then
AC_MSG_ERROR(Can't find flex. http://flex.sourceforge.net/)
fi
AC_CHECK_PROGS(YACC,bison byacc yacc,none)
if test "$YACC" = none; then
AC_MSG_ERROR(Can't find a parser generator.)
fi

AC_CHECK_PROG(PERL,perl,perl,no)
if test "$PERL" != perl; then
AC_MSG_ERROR(Fortran interface requires Perl. ftp://mrcnext.cso.uiuc.edu/pub/gnu/perl-4.036.tar.gz)
fi
AC_CHECK_PROG(RANLIB,ranlib,ranlib,touch)
AC_CHECK_PROG(AR,ar,ar,touch)
AC_CHECK_PROG(RPCGEN,rpcgen,rpcgen,no)
AC_PROG_CC

dnl Set up Fortran environment
BBH_F77_CONFIGURE

dnl Set default path for rnpl, path to include and lib 
AC_SUBST(BBH_DEFS)
AC_SUBST(RNPL_F77_INCLUDE)

dnl Checks for standard libraries.
dnl AC_CHECK_LIB(l, main)
dnl AC_CHECK_LIB(fl, main)
dnl AC_CHECK_LIB(y, yyerror)

dnl Locates include, lib directories for hdf, netcdf, vs, and sv

BBH_CHECK_RNPL_LIBS

dnl Used to invoke ..._CHECK_DAGH_WITH_RNPL_LIBS, eventually
dnl will check for RNPL

BBH_RNPL_SET_VARS

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNC(strdup,,DEFS="$DEFS -DDONT_HAVE_STRDUP")
AC_CHECK_FUNCS(atexit)
AC_CHECK_FUNCS(atabort)

AC_OUTPUT(
          Makefile
          src/Makefile
          etc/Makefile
          examples/wave1d/allf/Makefile
          examples/wave1d/c/Makefile
          examples/wave1d/f77/Makefile
          examples/wave2d/allf/Makefile
          examples/wave2d/c/Makefile
          examples/wave2d/f77/Makefile
          examples/wave3d/allf/Makefile
          examples/wave3d/c/Makefile
          examples/wave3d/f77/Makefile
          examples/templates/allf/Makefile
          examples/templates/c/Makefile
          examples/templates/f77/Makefile
          examples/get_param/Makefile
         )
