dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)

dnl Determine system type
BBH_SYS_GETSYSTEM

dnl Checks for programs
AC_PROG_CC
AC_CHECK_PROG(PERL,perl,perl,no)
AC_CHECK_PROG(RANLIB,ranlib,ranlib,touch)
AC_CHECK_PROG(AR,ar,ar,touch)
AC_CHECK_PROG(RPCGEN,rpcgen,rpcgen,no)

BBH_F77_CONFIGURE
BBH_RNPL_SET_VARS
AC_SUBST(BBH_DEFS)

dnl Checks for libraries.
dnl Replace `main' with a function in -lvs:
AC_CHECK_LIB(gen, basename)
dnl AC_CHECK_LIB(df, DFopen)
dnl AC_CHECK_LIB(netcdf, nccreate)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile src/Makefile)
