dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/svs.c)

dnl Determine system type
BBH_SYS_GETSYSTEM

dnl Checks for programs
AC_PROG_CC
AC_CHECK_PROG(RANLIB,ranlib,ranlib,touch)
AC_CHECK_PROG(AR,ar,ar,touch)
AC_CHECK_PROG(RPCGEN,rpcgen,rpcgen,no)
dnl 'mfi' script included with distribution
dnl AC_CHECK_PROG(CTOF,mfi,mfi,no) 
AC_CHECK_PROG(PERL,perl,perl,no)
if test "$PERL" != perl; then
AC_MSG_ERROR(Fortran interface requires Perl. ftp://mrcnext.cso.uiuc.edu/pub/gnu/perl-4.036.tar.gz)
fi

BBH_F77_CONFIGURE
BBH_CHECK_RNPL_LIBS
BBH_RNPL_SET_VARS
BBH_BBHUTIL_SETUP
AC_SUBST(BBH_DEFS)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(
          Makefile
          src/Makefile
          examples/Makefile
         )
