dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)


dnl Determine system type
BBH_SYS_GETSYSTEM

dnl Checks for programs.
AC_CHECK_PROG(PERL,perl,perl,no)
if test "$PERL" != perl; then
AC_MSG_ERROR(Fortran interface requires Perl. http://perl.com)
fi
AC_CHECK_PROG(RANLIB,ranlib,ranlib,touch)
AC_CHECK_PROG(AR,ar,ar,touch)
AC_CHECK_PROG(RPCGEN,rpcgen,rpcgen,no)
AC_CHECK_PROG(RNPL,rnpl,rnpl,no)
AC_PROG_CC

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(unsetenv)

dnl Set up Fortran environment
BBH_F77_CONFIGURE


dnl Check for headers and libraries needed for sdftoxvs
BBH_CHECK_HEADERS("bbhutil.h cliser.h","$INCLUDE_PATHS /usr/local/include",
                  SDFTOXVS_INCLUDE_PATHS,no)
BBH_CHECK_LIBS("bbhutil cliser","$LIB_PATHS /usr/local/lib",
               SDFTOXVS_LIB_PATHS,SDFTOXVS_LIBS,no)
AC_SUBST(SDFTOXVS_INCLUDE_PATHS)
AC_SUBST(SDFTOXVS_LIB_PATHS)
AC_SUBST(SDFTOXVS_LIBS)

dnl Check for headers and libraries needed for sdftodv
BBH_CHECK_HEADERS("bbhutil.h cliser.h","$INCLUDE_PATHS /usr/local/include",
                  SDFTODV_INCLUDE_PATHS,no)
BBH_CHECK_LIBS("bbhutil cliser","$LIB_PATHS /usr/local/lib",
               SDFTODV_LIB_PATHS,SDFTODV_LIBS,no)
AC_SUBST(SDFTODV_INCLUDE_PATHS)
AC_SUBST(SDFTODV_LIB_PATHS)
AC_SUBST(SDFTODV_LIBS)

AC_OUTPUT(
          Makefile
          xvsutil/Makefile
          sdftodv/Makefile
         )
